--- a/conf/verdict.properties.template
+++ b/conf/verdict.properties.template
@@ -53,7 +53,9 @@ verdict.meta_data.meta_database_suffix=_verdict
 verdict.meta_data.refresh_policy=per_session
 
 # the minimum subsample size needed
-verdict.error_bound.minimum_subsample_size = 1000
+verdict.error_bound.minimum_subsample_size = 10
+verdict.error_bound.trust_error_bound = 0.1
+
 # error bound
 ## one of: 80%, 85%, 90%, 95%, 99%, 99.5%, 99.9%
 verdict.error_bound.confidence_internal_probability=95%
