--- a/core/src/main/resources/verdict_default.properties
+++ b/core/src/main/resources/verdict_default.properties
@@ -55,7 +55,9 @@ verdict.meta_data.refresh_policy=per_session
 
 # error bound
 
-verdict.error_bound.minimum_subsample_size = 1000
+verdict.error_bound.minimum_subsample_size = 10
+verdict.error_bound.trust_error_bound = 0.1
+
 ## one of: 80%, 85%, 90%, 95%, 99%, 99.5%, 99.9%
 verdict.error_bound.confidence_internal_probability=95%
 ## "%s" is replaced by a column name (not supported yet)
